--- a/stylesheets/print.css
+++ b/stylesheets/print.css
@@ -6,11 +6,11 @@ body.bp {
   background: none;
   font-size: 10pt;
 }
-/* line 45, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 45, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp .container {
   background: none;
 }
-/* line 47, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 47, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp hr {
   background: #cccccc;
   color: #cccccc;
@@ -20,54 +20,54 @@ body.bp hr {
   padding: 0;
   border: none;
 }
-/* line 55, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 55, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp hr.space {
   background: white;
   color: white;
 }
-/* line 58, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 58, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
-/* line 60, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 60, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp code {
   font-size: 0.9em;
   font-family: "andale mono", "lucida console", monospace;
 }
-/* line 65, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 65, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp a img {
   border: none;
 }
-/* line 68, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 67, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp a:link, body.bp a:visited {
   background: transparent;
   font-weight: 700;
   text-decoration: underline;
 }
-/* line 72, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 72, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp p img.top {
   margin-top: 0;
 }
-/* line 74, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 74, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp blockquote {
   margin: 1.5em;
   padding: 1em;
   font-style: italic;
   font-size: 0.9em;
 }
-/* line 79, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 79, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp .small {
   font-size: 0.9em;
 }
-/* line 81, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 81, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp .large {
   font-size: 1.1em;
 }
-/* line 83, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 83, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp .quiet {
   color: #999999;
 }
-/* line 85, ../../../../../../Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+/* line 85, ../../../../.rvm/rubies/ruby-2.1.2/lib/ruby/gems/2.1.0/gems/compass-blueprint-1.0.0/framework/blueprint/stylesheets/blueprint/_print.scss */
 body.bp .hide {
   display: none;
 }
