--- a/stylesheets/pygment_trac.css
+++ b/stylesheets/pygment_trac.css
@@ -180,19 +180,19 @@
 /* Literal.Number */
 /* line 29, _sass/pygment_trac.scss */
 .highlight .s {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String */
 /* line 30, _sass/pygment_trac.scss */
 .highlight .na {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Attribute */
 /* line 31, _sass/pygment_trac.scss */
 .highlight .nb {
-  color: #0086b3;
+  color: #0086B3;
 }
 
 /* Name.Builtin */
@@ -205,13 +205,13 @@
 /* Name.Class */
 /* line 33, _sass/pygment_trac.scss */
 .highlight .no {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Constant */
 /* line 34, _sass/pygment_trac.scss */
 .highlight .ni {
-  color: purple;
+  color: #800080;
 }
 
 /* Name.Entity */
@@ -237,13 +237,13 @@
 /* Name.Namespace */
 /* line 38, _sass/pygment_trac.scss */
 .highlight .nt {
-  color: navy;
+  color: #000080;
 }
 
 /* Name.Tag */
 /* line 39, _sass/pygment_trac.scss */
 .highlight .nv {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Variable */
@@ -285,49 +285,49 @@
 /* Literal.Number.Oct */
 /* line 46, _sass/pygment_trac.scss */
 .highlight .sb {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Backtick */
 /* line 47, _sass/pygment_trac.scss */
 .highlight .sc {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Char */
 /* line 48, _sass/pygment_trac.scss */
 .highlight .sd {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Doc */
 /* line 49, _sass/pygment_trac.scss */
 .highlight .s2 {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Double */
 /* line 50, _sass/pygment_trac.scss */
 .highlight .se {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Escape */
 /* line 51, _sass/pygment_trac.scss */
 .highlight .sh {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Heredoc */
 /* line 52, _sass/pygment_trac.scss */
 .highlight .si {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Interpol */
 /* line 53, _sass/pygment_trac.scss */
 .highlight .sx {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Other */
@@ -339,7 +339,7 @@
 /* Literal.String.Regex */
 /* line 55, _sass/pygment_trac.scss */
 .highlight .s1 {
-  color: #dd1144;
+  color: #d14;
 }
 
 /* Literal.String.Single */
@@ -357,19 +357,19 @@
 /* Name.Builtin.Pseudo */
 /* line 58, _sass/pygment_trac.scss */
 .highlight .vc {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Variable.Class */
 /* line 59, _sass/pygment_trac.scss */
 .highlight .vg {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Variable.Global */
 /* line 60, _sass/pygment_trac.scss */
 .highlight .vi {
-  color: teal;
+  color: #008080;
 }
 
 /* Name.Variable.Instance */
@@ -381,12 +381,12 @@
 /* Literal.Number.Integer.Long */
 /* line 63, _sass/pygment_trac.scss */
 .type-csharp .highlight .k {
-  color: blue;
+  color: #0000FF;
 }
 
 /* line 64, _sass/pygment_trac.scss */
 .type-csharp .highlight .kt {
-  color: blue;
+  color: #0000FF;
 }
 
 /* line 65, _sass/pygment_trac.scss */
@@ -397,20 +397,20 @@
 
 /* line 66, _sass/pygment_trac.scss */
 .type-csharp .highlight .nc {
-  color: #2b91af;
+  color: #2B91AF;
 }
 
 /* line 67, _sass/pygment_trac.scss */
 .type-csharp .highlight .nn {
-  color: black;
+  color: #000000;
 }
 
 /* line 68, _sass/pygment_trac.scss */
 .type-csharp .highlight .s {
-  color: #a31515;
+  color: #A31515;
 }
 
 /* line 69, _sass/pygment_trac.scss */
 .type-csharp .highlight .sc {
-  color: #a31515;
+  color: #A31515;
 }
