--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,12 +72,15 @@
     	<li><a href="http://experimentaltheology.blogspot.com.au/">Experimental Theology</a></li>
     	<li><a href="http://www.carlmedearis.com/blog/">Carl Medearis</a></li>
     	<li><a href="http://brianmclaren.net/">Brian McLaren</a></li>
+    	<li><a href="http://rachelheldevans.com/blog">Rachel Held Evans</a></li>
+    	<li><a href="http://www.patheos.com/blogs/jesuscreed/">Jesus Creed</a></li>
     	</ul>
     	<li>Games &amp; Youtubers</li>
     	<ul>
-    	<li><a href="https://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
+    	<li><a href="http://www.kerbalspaceprogram.com/index.php">Kerbal Space Program</a></li>
     	<li><a href="http://www.youtube.com/user/szyzyg">Scott Manley</a></li>
     	<li><a href="http://www.youtube.com/user/TheWinterOwl">The Winter Owl</a></li>
+    	<li><a href="http://www.youtube.com/user/Blitzkriegsler">Blitzkriegsler</a></li>
     	<li><a href="http://www.youtube.com/user/xPDxTV">Play Daily TV</a></li>
     	<li><a href="http://www.youtube.com/user/SideStrafe">SideStrafe</a></li>
     	<li><a href="http://www.youtube.com/user/FRANKIEonPCin1080p">FRANKIEonPCin1080p</a></li>
@@ -91,21 +94,45 @@
       <li>Feed</li>
       <ul>
       <li><a href="/atom.xml"><img alt="Atom feed" src="/images/Feed-icon.svg" width="32" height="32"/></a></li>
+      <li>            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/MikeBsPhysics" data-widget-id="589824863197499392">Tweets by @MikeBsPhysics</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </li>
       </ul>
     </ul>
   </nav>
   <footer id="footer">
     <div class="flair">
     <span id="SE-flair"><a href="http://physics.stackexchange.com/users/17320/michael-brown"><img src="http://physics.stackexchange.com/users/flair/17320.png?theme=dark" width="208" height="58" alt="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" title="profile for Michael Brown at Physics Stack Exchange, Q&amp;A for active researchers, academics and students of physics" /></a></span>
-    You can find me on <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
+    You can find me on <a href="https://twitter.com/MikeBsPhysics">Twitter</a>,
+    the <a href="http://arxiv.org/a/brown_m_3.html">arXiv</a>,
+    <a href="http://www.researchgate.net/profile/Michael_Brown31/">Researchgate</a>,
     <a href="https://github.com/gazebodude">GitHub</a> or <a href="http://physics.stackexchange.com/users/17320/michael-brown">Physics Stackexchange</a>.<br/>
     <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a>.<br/>
     Pages marked up using <a href="http://jekyllrb.com/">Jekyll</a>, <a href="http://sass-lang.com/">Sass</a>, <a href="http://compass-style.org/">Compass</a> and <a href="http://coffeescript.org/">Coffeescript</a> by a rank amateur (as you can tell).</small>
     </div>
     <div class="CC-license">
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work by <a xmlns:cc="http://creativecommons.org/ns#" href="http://gazebodude.github.io" property="cc:attributionName" rel="cc:attributionURL">Michael Brown</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work by <a xmlns:cc="http://creativecommons.org/ns#" href="http://mikejbrown.github.io" property="cc:attributionName" rel="cc:attributionURL">Michael Brown</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
     </div>
   </footer>
 </div>
+
+<!-- Twitter script magic -->
+<script type="text/javascript">window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+ 
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+ 
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+
 </body>
 </html>
